; ModuleID = '/home/carl/AnghaBench/php-src/ext/xmlrpc/libxmlrpc/extr_system_methods.c_xsm_lazy_doc_methods_cb.c'
source_filename = "/home/carl/AnghaBench/php-src/ext/xmlrpc/libxmlrpc/extr_system_methods.c_xsm_lazy_doc_methods_cb.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@xsm_introspection_xml = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32, i8*)* @xsm_lazy_doc_methods_cb to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @xsm_lazy_doc_methods_cb(i32 %0, i8* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i8*, align 8
  %5 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  store i8* %1, i8** %4, align 8
  %6 = load i32, i32* @xsm_introspection_xml, align 4
  %7 = call i32 @XMLRPC_IntrospectionCreateDescription(i32 %6, i32* null)
  store i32 %7, i32* %5, align 4
  %8 = load i32, i32* %3, align 4
  %9 = load i32, i32* %5, align 4
  %10 = call i32 @XMLRPC_ServerAddIntrospectionData(i32 %8, i32 %9)
  %11 = load i32, i32* %5, align 4
  %12 = call i32 @XMLRPC_CleanupValue(i32 %11)
  ret void
}

declare dso_local i32 @XMLRPC_IntrospectionCreateDescription(i32, i32*) #1

declare dso_local i32 @XMLRPC_ServerAddIntrospectionData(i32, i32) #1

declare dso_local i32 @XMLRPC_CleanupValue(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
